--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,111 +19,109 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-    sdk: ^3.5.4
+  sdk: ^3.5.4
 
 dependencies:
-    flutter:
-        sdk: flutter
+  flutter:
+    sdk: flutter
 
-    # Icon Packages
-    cupertino_icons: ^1.0.8
-    iconsax: ^0.0.8
-    lucide_icons: ^0.257.0
+  # Icon Packages
+  cupertino_icons: ^1.0.8
+  iconsax: ^0.0.8
+  lucide_icons: ^0.257.0
 
-    google_nav_bar: ^5.0.7
-#    google_fonts: ^6.2.1
-#    path_provider_android: ^2.0.20
+  google_nav_bar: ^5.0.7
+  #    google_fonts: ^6.2.1
+  #    path_provider_android: ^2.0.20
 
-#   Utility Packages
-    http: ^1.3.0
-    intl: ^0.20.2
-    logger: ^2.5.0
-    url_launcher: ^6.3.1
+  #   Utility Packages
+  http: ^1.3.0
+  intl: ^0.20.2
+  logger: ^2.5.0
+  url_launcher: ^6.3.1
 
-#   State Management
-    get: ^4.7.2
-    get_storage: ^2.1.1
+  #   State Management
+  get: ^4.7.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
-    flutter_test:
-        sdk: flutter
+  flutter_test:
+    sdk: flutter
 
-    # The "flutter_lints" package below contains a set of recommended lints to
-    # encourage good coding practices. The lint set provided by the package is
-    # activated in the `analysis_options.yaml` file located at the root of your
-    # package. See that file for information about deactivating specific lint
-    # rules and activating additional ones.
-    flutter_lints: ^5.0.0
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
+  flutter_lints: ^5.0.0
 
 # The following section is specific to Flutter packages.
 flutter:
-    # The following line ensures that the Material Icons font is
-    # included with your application, so that you can use the icons in
-    # the material Icons class.
-    uses-material-design: true
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
-    assets:
-        - assets/icons/documents.png
-        - assets/icons/services.png
-        - assets/icons/survey.png
-        - assets/icons/all_services.png
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - assets/icons/
+    - assets/images/
 
-    # An image asset can refer to one or more resolution-specific "variants", see
-    # https://flutter.dev/to/resolution-aware-images
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/to/resolution-aware-images
 
-    # For details regarding adding assets from package dependencies, see
-    # https://flutter.dev/to/asset-from-package
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/to/asset-from-package
 
-    # To add custom fonts to your application, add a fonts section here,
-    # in this "flutter" section. Each entry in this list should have a
-    # "family" key with the font family name, and a "fonts" key with a
-    # list giving the asset and other descriptors for the font. For
-    # example:
-    fonts:
-        - family: Migo
-          fonts:
-              - asset: assets/fonts/Migo-Bold.ttf
-              - asset: assets/fonts/Migo-Extra-Bold.ttf
-                weight: 700
-        - family: Mogena
-          fonts:
-              - asset: assets/fonts/Mogena.ttf
-              # - asset: fonts/TrajanPro_Bold.ttf
-              #   weight: 700
-        - family: Rose
-          fonts:
-              - asset: assets/fonts/Rose.ttf
-        - family: Domaine Display
-          fonts:
-              - asset: assets/fonts/TestDomaineDisplay-Bold.otf
-        - family: Angelic Bonques
-          fonts:
-              - asset: assets/fonts/Angelic-Bonques-Sans-Regular.ttf
-              - asset: assets/fonts/Angelic-Bonques-Script.ttf
-                style: italic
-        - family: Lumiera
-          fonts:
-              - asset: assets/fonts/Lumiera.ttf
-              - asset: assets/fonts/LumieraHandwriting.ttf
-                style: italic
-              - asset: assets/fonts/LumieraRough.ttf
-                weight: 700
-        - family: Lato
-          fonts:
-            - asset: assets/fonts/Lato/Lato-Regular.ttf
-            - asset: assets/fonts/Lato/Lato-Italic.ttf
-              style: italic
-            - asset: assets/fonts/Lato/Lato-Bold.ttf
-              weight: 700
-            - asset: assets/fonts/Lato/Lato-BoldItalic.ttf
-              weight: 700
-              style: italic
-            - asset: assets/fonts/Lato/Lato-LightItalic.ttf
-              weight: 200
-              style: italic
-            - asset: assets/fonts/Lato/Lato-Light.ttf
-              weight: 200
-    #
-    # For details regarding fonts from package dependencies,
-    # see https://flutter.dev/to/font-from-package
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
+  fonts:
+    - family: Migo
+      fonts:
+        - asset: assets/fonts/Migo-Bold.ttf
+        - asset: assets/fonts/Migo-Extra-Bold.ttf
+          weight: 700
+    - family: Mogena
+      fonts:
+        - asset: assets/fonts/Mogena.ttf
+        # - asset: fonts/TrajanPro_Bold.ttf
+        #   weight: 700
+    - family: Rose
+      fonts:
+        - asset: assets/fonts/Rose.ttf
+    - family: Domaine Display
+      fonts:
+        - asset: assets/fonts/TestDomaineDisplay-Bold.otf
+    - family: Angelic Bonques
+      fonts:
+        - asset: assets/fonts/Angelic-Bonques-Sans-Regular.ttf
+        - asset: assets/fonts/Angelic-Bonques-Script.ttf
+          style: italic
+    - family: Lumiera
+      fonts:
+        - asset: assets/fonts/Lumiera.ttf
+        - asset: assets/fonts/LumieraHandwriting.ttf
+          style: italic
+        - asset: assets/fonts/LumieraRough.ttf
+          weight: 700
+    - family: Lato
+      fonts:
+        - asset: assets/fonts/Lato/Lato-Regular.ttf
+        - asset: assets/fonts/Lato/Lato-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Lato/Lato-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Lato/Lato-BoldItalic.ttf
+          weight: 700
+          style: italic
+        - asset: assets/fonts/Lato/Lato-LightItalic.ttf
+          weight: 200
+          style: italic
+        - asset: assets/fonts/Lato/Lato-Light.ttf
+          weight: 200
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/to/font-from-package
