--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   get: ^4.7.2
   get_storage: ^2.1.1
   provider:
+  flutter_riverpod:
+  image_picker:
 
 dev_dependencies:
   flutter_test:
