--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mahareal_flutter_app",
-  "main": "dist/server.js",
+  "main": "backend/dist/server.js",
+  "packageManager": "yarn@4.9.1",
   "scripts": {
     "dev": "ts-node-dev --respawn backend/src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node backend/dist/server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
