--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   iconsax: ^0.0.8
   lucide_icons: ^0.257.0
 
+  # Firebase & Google
+  firebase_core: ^2.30.0
+  firebase_auth: ^4.17.0
+  google_sign_in: ^6.2.1
   google_nav_bar: ^5.0.7
   #    google_fonts: ^6.2.1
   #    path_provider_android: ^2.0.20
@@ -39,6 +43,7 @@ dependencies:
   intl: ^0.20.2
   logger: ^2.5.0
   url_launcher: ^6.3.1
+  shared_preferences: ^2.2.2
 
   #   State Management
   get: ^4.7.2
