--- a/.gitignore
+++ b/.gitignore
@@ -32,10 +32,9 @@ migrate_working_dir/
 build/
 
 # generated_plugin_registrant
-generated_plugin_registrant.dart
-linux/flutter/generated_plugin_registrant.cc
-windows/flutter/generated_plugin_registrant.cc
+**/generated_plugin_registrant.cc
 macos/Flutter/GeneratedPluginRegistrant.swift
+
 # iOS
 ios/Pods/
 ios/.symlinks/
