--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ build/
 
 # generated_plugin_registrant
 **/generated_plugin_registrant.cc
+**/generated_plugins.cmake
 macos/Flutter/GeneratedPluginRegistrant.swift
 
 # iOS
